Restore original mvnw.cmd with parentheses-safe fixes